--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "json-groupby": "^1.1.0",
     "vue": "^2.6.6"
   },
   "devDependencies": {
