--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
-  "name": "grouped-table",
-  "version": "0.1.0",
-  "private": true,
+  "name": "@acarat/vue-grouped-table",
+  "version": "0.1.6",
+  "main": "dist/vue-grouped-table.common.js",
+  "files": [
+    "dist/*",
+    "src/*",
+    "public",
+    "*.json",
+    "*.js"
+  ],
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build:lib": "vue-cli-service build --target lib --name vue-grouped-table src/components/index.js",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
